# voice-agent

./: .gitignore  docker-compose.yml  render.yaml  requirements.txt
backend/: .gitignore  Dockerfile  agent.py  config.py  main.py  pyproject.toml  rag_engine.py  requirements.txt  schemas.py
backend/tests/: test_agent.py  test_api_security.py  test_main.py  test_rag_engine.py
data/: knowledge_base.txt
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
